Added sync waves

--- a/00-argo-crossplane-aws.yaml
+++ b/00-argo-crossplane-aws.yaml
@@ -10,7 +10,7 @@ spec:
   sources:
     - repoURL: 'https://charts.crossplane.io/stable'
       chart: crossplane
-      targetRevision: "latest"
+      targetRevision: "1.19.1"
     # helm:
     #   valueFiles:
     #   - values.yaml
