--- a/yaml/04-bucket.yaml
+++ b/yaml/04-bucket.yaml
@@ -2,6 +2,8 @@ apiVersion: s3.aws.upbound.io/v1beta1
 kind: Bucket
 metadata:
   generateName: crossplane-bucket-
+  annotations:
+    argocd.argoproj.io/sync-wave: "-30"
 spec:
   forProvider:
     region: us-east-2
