--- a/apps/crossplane-helm.yaml
+++ b/apps/crossplane-helm.yaml
@@ -5,14 +5,17 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: 'https://charts.crossplane.io/stable'
-    chart: crossplane
-    targetRevision: "1.19.1"
+  sources:
+    - repoURL: 'https://charts.crossplane.io/stable'
+      chart: crossplane
+      targetRevision: "1.19.1"
     # Uncomment and customize the helm values if needed:
     # helm:
     #   valueFiles:
     #     - values.yaml
+    - repoURL: 'https://github.com/devplatformsolutions/crossplane-config.git'
+      path: './providers/aws'
+      targetRevision: HEAD
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: crossplane-system
