Added dynamodb and ec2 composition for testing

--- a/apps/crossplane-helm.yaml
+++ b/apps/crossplane-helm.yaml
@@ -16,6 +16,9 @@ spec:
     - repoURL: 'https://github.com/devplatformsolutions/crossplane-config.git'
       path: './providers/aws'
       targetRevision: HEAD
+    - repoURL: 'https://github.com/devplatformsolutions/crossplane-config.git'
+      path: './resources/aws/compositions/xrd'
+      targetRevision: HEAD
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: crossplane-system
