--- a/apps/crossplane-resources.yaml
+++ b/apps/crossplane-resources.yaml
@@ -5,12 +5,15 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: 'https://github.com/devplatformsolutions/crossplane-config.git'
-    path: 'resources/aws'
-    targetRevision: HEAD
-    directory:
-      recurse: true
+  sources:
+    - repoURL: 'https://github.com/devplatformsolutions/crossplane-config.git'
+      path: 'resources/aws/s3'
+      targetRevision: HEAD
+      directory:
+        recurse: true
+    - repoURL: 'https://github.com/devplatformsolutions/crossplane-config.git'
+      path: './resources/aws/compositions/claims'
+      targetRevision: HEAD
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: crossplane-system
