Added dynamodb and ec2 composition for testing

--- a/apps/crossplane-helm.yaml
+++ b/apps/crossplane-helm.yaml
@@ -17,6 +17,9 @@ spec:
       path: './providers/aws'
       targetRevision: HEAD
     - repoURL: 'https://github.com/devplatformsolutions/crossplane-config.git'
+      path: './resources/aws/config'
+      targetRevision: HEAD
+    - repoURL: 'https://github.com/devplatformsolutions/crossplane-config.git'
       path: './resources/aws/compositions/xrd'
       targetRevision: HEAD
   destination:
