--- a/apps/crossplane-resources.yaml
+++ b/apps/crossplane-resources.yaml
@@ -11,9 +11,9 @@ spec:
       targetRevision: HEAD
       directory:
         recurse: true
-    - repoURL: 'https://github.com/devplatformsolutions/crossplane-config.git'
-      path: './resources/aws/compositions/claims'
-      targetRevision: HEAD
+    # - repoURL: 'https://github.com/devplatformsolutions/crossplane-config.git'
+    #   path: './resources/aws/compositions/claims'
+    #   targetRevision: HEAD
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: crossplane-system
